# slide-maker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.ipynb  doc_pres.py  graph.ipynb  pyproject.toml  slide_maker.py  slide_parallel.py
test/: conftest.py  test_slide_parallel.py
texts/: sample.txt  sample_2.txt
