[project]
name = "slide-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.55.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "openai>=2.12.0",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "python-dotenv>=1.2.1",
]
