[project]
name = "slide-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "google-genai>=1.55.0",
    "langchain>=1.2.0",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "numpy>=2.3.5",
    "openai>=2.12.0",
    "pillow>=12.0.0",
    "psycopg[binary,pool]>=3.3.2",
    "reportlab>=4.2.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.2.1",
]
